feat : добавление обработки CORS , переделка методов
